--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,8 @@
-fastapi==0.95.1
-uvicorn==0.22.0
-sqlalchemy==2.0.12
-pydantic==1.10.7
-passlib==1.7.4
-python-jose==3.3.0
-python-multipart==0.0.6
-email-validator==2.0.0
-alembic==1.10.4
-bcrypt==4.0.1
+fastapi
+uvicorn
+sqlalchemy
+psycopg2-binary
+pydantic
+passlib[bcrypt]
+python-jose[cryptography]
+python-multipart
